# wayback

./: .clang-format  README.md  buffer.c  global_registry.c  layer_surface.c  layer_surface_registry.c  meson.build  output.c  output_registry.c  shm.c  wayback.c  wayland.c  zwlr_layer_surface_registry.c
include/: buffer.h  layer_surface.h  layer_surface_listener.h  output.h  output_listener.h  registry.h  registry_listener.h  shm.h  wayback.h
protocols/: meson.build
src/: buffer.c  layer_surface.c  layer_surface_listener.c  meson.build  output.c  output_listener.c  registry_listener.c  wayback.c
